--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section class="photo">
         <figure class="frame">
           <img src="photo_2025-11-23_23-21-27.jpg" alt="Portrait" loading="lazy">
-          <h1 class="overlay-title">Би май валентин</h1><br>
+          <h1 class="overlay-title">Би май валентайн</h1><br>
         </figure>
       </section>
 
@@ -126,3 +126,4 @@
     </script>
   </body>
 </html>
+
